# lol-advisor

./: .gitignore  DEVELOPMENT_PLAN.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vercel.json  vitest.config.ts
__tests__/components/: BuildSummary.test.tsx  ChampionCard.test.tsx  ChampionGrid.test.tsx  CyberButton.test.tsx  CyberCard.test.tsx  MatchHistoryRow.test.tsx  ProMatchList.test.tsx  ProMatchRow.test.tsx  RoleFilter.test.tsx
__tests__/e2e/: champion-page.spec.ts  home.spec.ts  match-detail.spec.ts  real-user-flow.spec.ts  summoner-page.spec.ts
__tests__/unit/: cache.test.ts  ddragon.test.ts  helpers.test.ts  scoring.test.ts  scraper.test.ts  transforms.test.ts
app/: HomeClient.tsx  globals.css  layout.tsx  page.tsx  providers.tsx  sitemap.ts
app/advisor/: AdvisorPageClient.tsx  page.tsx
app/live/: LivePageClient.tsx  page.tsx
components/advisor/: ChampionSelect.tsx  CounterList.tsx  MatchupBuild.tsx  RolePicker.tsx
components/champions/: ChampionCard.tsx  ChampionGrid.tsx  RoleFilter.tsx
components/desktop/: ChampSelectOverlay.tsx  LCUStatus.tsx
components/layout/: Footer.tsx  (+2 more)
docs/: concept-3-neon-cyber-reference.html
hooks/: useAdvisor.ts  useDataDragon.ts  useLCU.ts  useLiveGame.ts  useProBuilds.ts  useSummoner.ts
scripts/: initial-scrape.ts  seed-champions.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  remote-lcu.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/lcu/: client.rs  detector.rs  mod.rs  types.rs  websocket.rs
stores/: appStore.ts
(+62 files in other folders)
