[package]
name = "lol-advisor"
version = "0.1.0"
description = "LOL Advisor Desktop Companion"
authors = ["you"]
edition = "2021"

[lib]
name = "lol_advisor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
native-tls = "0.2"
base64 = "0.22"
regex = "1"
log = "0.4"
futures-util = "0.3"
